--- a/srcs/requirements/bonus/website/conf/html/index.html
+++ b/srcs/requirements/bonus/website/conf/html/index.html
@@ -3,25 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inception Static Site</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>[Your Login]'s Static Showcase</h1>
+
+    <header class="hero">
+        <div class="header-content">
+            <img src="https://cdn.intra.42.fr/users/08ee19ff5e4cc4d8393cf1a77dd05467/mregrag.jpg" class="profile-picture">
+            <h1>Mohamed Regrag</h1>
+            <p class="tagline">Software Developer | 1337 Student</p>
+            <a href="https://github.com/mregrag" class="cta-button">View Projects</a>
+        </div>
     </header>
-    
-    <main>
-        <h2>Project Inception (Bonus)</h2>
-        <p>This page proves the ability to deploy a simple, non-PHP web server alongside the main stack.</p>
-        
-        <h3>Key Technologies Used</h3>
-        <ul>
-            <li>Docker & Docker Compose (Orchestration)</li>
-            <li>NGINX (Serving Static Files)</li>
-            <li>Debian Bookworm (Base OS)</li>
-            <li>HTML5 & CSS3</li>
-        </ul>
+
+    <main class="container">
+        <section id="about" class="section">
+            <h2>About Me</h2>
+            <p>
+                A highly motivated and autonomous developer with a strong foundation in C and Unix environments, cultivated through intensive peer-to-peer learning at the 42 Network. I thrive on tackling complex algorithmic challenges and building efficient, clean code. I'm currently expanding my knowledge into web technologies (HTML, CSS) and containerization (Docker).
+            </p>
+        </section>
+
+        <hr>
+
+        <section id="skills" class="section">
+            <h2>Technical Skills</h2>
+            <ul class="skills-list">
+                <li>C / C++</li>
+                <li>Shell Scripting (Bash)</li>
+                <li>Javascript & Typescript</li>
+                <li>Linux/Unix</li>
+                <li>Git & GitHub</li>
+                <li>Data Structures & Algorithms</li>
+                <li>Docker & Docker Compose</li>
+            </ul>
+        </section>
+
+        <hr>
+
+        <section id="projects" class="section">
+            <h2>Featured Projects</h2>
+
+            <div class="project-card">
+                <h3>[Webserver]</h3>
+                <p>Description: Reimplementation of the C standard library's `printf` function, handling custom variadic arguments and complex formatting. Focus on memory safety.</p>
+                <a href="[Link to GitHub Repo]" target="_blank" class="project-link">View Code &rarr;</a>
+            </div>
+
+            <div class="project-card">
+                <h3>[Inception/Docker]</h3>
+                <p>Description: Setup of a multi-service environment using Docker Compose (MariaDB, WordPress, Nginx, etc.). Focused on networking and container orchestration.</p>
+                <a href="[Link to GitHub Repo]" target="_blank" class="project-link">View Code &rarr;</a>
+            </div>
+
+            <div class="project-card">
+                <h3>[Inception/Docker]</h3>
+                <p>Description: Setup of a multi-service environment using Docker Compose (MariaDB, WordPress, Nginx, etc.). Focused on networking and container orchestration.</p>
+                <a href="[Link to GitHub Repo]" target="_blank" class="project-link">View Code &rarr;</a>
+            </div>
+
+            <div class="project-card">
+                <h3>[Inception/Docker]</h3>
+                <p>Description: Setup of a multi-service environment using Docker Compose (MariaDB, WordPress, Nginx, etc.). Focused on networking and container orchestration.</p>
+                <a href="[Link to GitHub Repo]" target="_blank" class="project-link">View Code &rarr;</a>
+            </div>
+
+        </section>
+
+        <hr>
+
     </main>
 </body>
 </html>
